brat/test/golden/error/arith_implicit_conversion3.brat.golden
Error in test/golden/error/arith_implicit_conversion3.brat@2:11
f(x, y) = y + x
          ^

  Type mismatch when checking y
Expected: (left :: Int)
But got:  (y :: Float)


